<resources>
    <string name="app_name">Music Share</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>
    <string name="login">Login</string>
    <string name="or_register_now">...or register now!</string>
    <string name="register">Register</string>
    <string name="insert_name">Insert name, please</string>
    <string name="insert_surname">Insert surname, please</string>
    <string name="insert_email">Insert e-mail, please</string>
    <string name="insert_password">Insert password, please</string>
    <string name="success">Done!</string>
    <string name="error">Error</string>
    <string name="error_login">Wrong E-Mail or Password</string>
    <string name="mail_already_exists">Your email already exists</string>
    <string name="uploading_image">Uploading image...</string>
    <string name="done">Done!</string>
    <string name="file_not_exist">File doesn\'t exist</string>
    <string name="uploading_profile_picture">Uploading profile picture</string>
    <string name="wrong_password">Wrong password</string>
    <string name="mail_does_not_exist">Your email doesn\'t exist</string>
    <string name="email_not_valid">Your email is not valid</string>
    <string name="pwd_not_valid">Your password is not valid</string>
    <string name="loading">Loading...</string>
    <string name="wait_please">Wait please</string>
    <string name="search">Search</string>
    <string name="no_more_info">Other info not available</string>
    <string name="added">added to following list</string>
    <string name="removed">removed</string>

    <string name="start_with_artists">Search new people\nby artist</string>
    <string name="start_with_genre">Search new people\nby genre</string>
    <string name="recent_tracks">Recently listened</string>
    <string name="followers">Followers</string>
    <string name="about">About</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_artists">Edit artists</string>
    <string name="edit_genres">Edit genres</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="email_no_blank_spaces">Your Email contains blank spaces</string>
    <string name="pwd_no_blank_spaces">Your password contains blank spaces</string>
    <string name="is_now_following_you">is now following you.</string>
    <string name="image_selected">Image selected</string>
    <string name="no_one">No one has been found</string>
    <string name="this_app_requires_internet">This app needs an active Internet connection to work properly</string>
    <string name="warning">Warning</string>
    <string name="video_not_available">Video not available</string>
    <string name="add_or_remove">Add or remove this user from your following list</string>
    <string name="are_now_following_you">are now following you</string>
    <string name="has_not_listened_yet">hasn\'t listened \n to music yet</string>
    <string name="songs">Songs</string>
    <string name="exit">Logout</string>
    <string name="you_removed">You removed</string>
    <string name="undo">Undo</string>
    <string name="error_loading">Error loading songs</string>
    <string name="other_info">Other info</string>
    <string name="other_info_about">Other info about</string>
    <string name="no_songs">You haven\'t listened to any song yet</string>
    <string name="have_not_listened_yet">You haven\'t listened to \n any song yet</string>
    <string name="home">Home</string>
    <string name="by_artists">Artists</string>
    <string name="by_genres">Genres</string>
    <string name="my_profile">My profile</string>
    <string name="introduction_people_title">Check out what your friends are listening to</string>
    <string name="introduction_artists_title">Search new people by artist</string>
    <string name="introduction_genres_title">Search new people by genre</string>
    <string name="introduction_profile_title">Check what you have just listened to</string>
    <string name="download_started">Download started</string>
    <string name="downloading_image">Downloading image...</string>
    <string name="show_profile_picture">Show profile picture</string>
    <string name="download_image">Download image</string>
    <string name="people">People</string>
    <string name="back">Back</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="show_tutorial">Show introduction</string>
    <string name="we_need_storage_permissions">We\'re sorry, we need storage permissions to do that</string>
    <string name="profile_picture">Profile picture</string>
    <string name="spotify_support">Spotify support</string>
    <string name="spotify_support_description">This app supports Spotify. Please open Spotify settings and enable Device Broadcast Status</string>
    <string name="pref_use_spotify_title">Search songs on Spotify</string>
    <string name="pref_use_spotify_summary">Use Spotify to listent to songs you select. If you disable this option, you\'ll open YouTube</string>
    <string name="pref_miscellaneous">Miscellaneous</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notification_check_frequency_title">Notification check interval frequency</string>
    <string name="settings">Settings</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_summary">Send an email to the developer</string>
    <string name="other">Other</string>
    <string name="data_saving_title">Data saving</string>
    <string name="cache_title">Enable cache</string>
    <string name="cache_summary">Use cache to save profile pictures</string>
    <string name="send_email">Send E-Mail...</string>
    <string name="email_body">Insert your message here :)</string>
    <string name="email_subject">Hey! Check out this mail!</string>
    <string name="data_saving_summary">Load images only if you\'re using WiFi</string>
    <string name="show_followers">Show followers</string>
    <string name="search_people">Search people</string>
    <string name="password_not_valid">Password not valid, please insert only alphanumerical characters</string>
    <string name="no_one_has_been_found">No one has been found</string>
    <string name="start_following">Start searching\nnew people</string>
    <string name="get_started">GET STARTED</string>
    <string name="first_introduction">Music Share</string>
    <string name="first_introduction_subtitle">Check what your friends are listening to</string>
    <string name="second_introduction">Discover new songs</string>
    <string name="second_introduction_subtitle">Search new people by artist or by genre</string>
    <string name="third_introduction">Share what you hear</string>
    <string name="third_introduction_subtitle">Songs you listened to will be added to your profile</string>
    <string name="no_followers_found">No followers found</string>
    <string name="all">All</string>
    <string name="follow">Follow</string>
    <string name="remove">Remove</string>

    <!-- Settings Keys, do not edit -->
    <string name="notification_check_frequency" translatable="false">notification_check_frequency</string>
    <string name="use_spotify" translatable="false">use_spotify</string>
    <string name="feedback_key" translatable="false">feedback</string>
    <string name="data_saving" translatable="false">data_saving</string>
    <string name="cache_key" translatable="false">cache_key</string>
</resources>
