<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_notifications">
        <ListPreference
            android:key="@string/notification_check_frequency"
            android:entries="@array/notification_check_frequency_entries"
            android:entryValues="@array/notification_check_frequency_values"
            android:title="@string/pref_notification_check_frequency_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_miscellaneous"
        android:key="@string/pref_miscellaneous">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/use_spotify"
            android:summary="@string/pref_use_spotify_summary"
            android:title="@string/pref_use_spotify_title" >
        </SwitchPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/other">
        <SwitchPreference
            android:key="@string/data_saving"
            android:title="@string/data_saving_title"
            android:defaultValue="false"
            android:summary="@string/data_saving_summary">
        </SwitchPreference>
        <SwitchPreference
            android:key="@string/cache_key"
            android:title="@string/cache_title"
            android:defaultValue="false"
            android:summary="@string/cache_summary">
        </SwitchPreference>
        <Preference
            android:key="@string/feedback_key"
            android:title="@string/feedback_title"
            android:summary="@string/feedback_summary">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>