<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:orderInCategory="100"
        android:title="@string/abc_search_hint"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_change_profile_picture"
        android:orderInCategory="100"
        android:title="@string/change_profile_picture"
        app:showAsAction="never"
        android:visible="true" />

    <item
        android:id="@+id/action_show_tutorial"
        android:orderInCategory="100"
        android:title="@string/show_tutorial"
        app:showAsAction="never"
        android:visible="true" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"
        android:visible="true" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never"
        android:visible="true" />
</menu>