<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <com.lob.music_share.util.ui.textview.TitleTextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textSize="52sp"
        android:id="@+id/logo_login"
        android:maxLines="1"
        android:gravity="center"
        android:textColor="#fff"
        android:includeFontPadding="false"
        android:text="@string/app_name"
        android:layout_above="@+id/text_input_layout_email"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="67dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/md_white"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionGo"
            android:inputType="textEmailAddress"
            android:textColor="@color/md_white"
            android:textColorHint="@color/md_white"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        android:textColorHint="@color/md_white"
        android:layout_below="@+id/text_input_layout_email"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:textColor="@color/md_white"
            android:textColorHint="@color/md_white"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/md_white"
        android:layout_below="@+id/text_input_layout_password"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/or_register_now"
        android:id="@+id/text_view_not_registered"
        android:textSize="22dp"
        android:background="?attr/selectableItemBackground"
        android:textColor="@color/md_white"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/button_login"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
