<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.lob.music_share.activity.RegisterActivity">

    <com.lob.music_share.util.ui.textview.TitleTextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textSize="56sp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="32dp"
        android:id="@+id/logo_register"
        android:gravity="center"
        android:textColor="#fff"
        android:text="@string/app_name"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logo_register">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="@color/md_white"
                app:errorTextAppearance="@style/TextAppearance.App.TextInputLayout"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/edit_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:inputType="textPersonName"
                    android:textColor="@color/md_white"
                    android:textColorHint="@color/md_white"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:textColorHint="@color/md_white"
                app:errorTextAppearance="@style/TextAppearance.App.TextInputLayout"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/edit_text_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/md_white"
                    android:textColorHint="@color/md_white"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/md_white"
                app:errorTextAppearance="@style/TextAppearance.App.TextInputLayout"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/md_white"
                    android:textColorHint="@color/md_white"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:errorTextAppearance="@style/TextAppearance.App.TextInputLayout"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:textColorHint="@color/md_white"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:textColor="@color/md_white"
                    android:textColorHint="@color/md_white"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_artists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/artists"
                app:errorTextAppearance="@style/TextAppearance.App.TextInputLayout"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:textColorHint="@color/md_white"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <EditText
                    android:id="@+id/edit_text_artists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:inputType="text"
                    android:textColor="@color/md_white"
                    android:textColorHint="@color/md_white"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/genres"
                app:errorTextAppearance="@style/TextAppearance.App.TextInputLayout"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:textColorHint="@color/md_white"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <EditText
                    android:id="@+id/edit_text_genres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:inputType="text"
                    android:textColor="@color/md_white"
                    android:textColorHint="@color/md_white"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_picture"
                android:textColor="@color/md_white"
                android:background="@color/colorPrimaryDark"
                android:id="@+id/button_profile_picture"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/md_white"
                android:background="@color/colorPrimaryDark"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
