<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/introduction_third"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_introduction"
        android:textSize="36dp"
        android:textColor="@color/md_black"
        android:id="@+id/imageView4"
        android:layout_below="@+id/main"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="@color/md_grey_700"
        android:layout_marginRight="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/third_introduction_subtitle"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <ImageView
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:padding="22dp"
        android:id="@+id/main"
        android:src="@drawable/third_introduction"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="121dp" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:elevation="28dp"
        android:text="@string/get_started"
        android:foreground="?attr/selectableItemBackground"
        android:backgroundTint="@color/md_white"
        android:textColor="@color/md_black"
        android:layout_marginBottom="82dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/get_started_button" />

    <ImageView
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:src="@drawable/circle_gray"
        android:layout_marginBottom="35dp"
        android:id="@+id/imageView2"
        android:layout_marginRight="12dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/imageView" />

    <ImageView
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:id="@+id/imageView"
        android:src="@drawable/circle_gray"
        android:layout_alignTop="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:id="@+id/imageView3"
        android:src="@drawable/circle"
        android:layout_marginLeft="12dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

</RelativeLayout>